Package_Tools/include-C/fwupd-1/libfwupd/fertig/fwupd_report.pp


unit fwupd_report;
interface

{
  Automatically converted by H2Pas 1.0.0 from fwupd_report.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    fwupd_report.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
PFwupdReport  = ^FwupdReport;
PFwupdReportClass  = ^FwupdReportClass;
PFwupdReportFlags  = ^FwupdReportFlags;
Pgchar  = ^gchar;
PGHashTable  = ^GHashTable;
PGVariant  = ^GVariant;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{
 * Copyright (C) 2022 Richard Hughes <richard@hughsie.com>
 *
 * SPDX-License-Identifier: LGPL-2.1+
  }
(** unsupported pragma#pragma once*)
{$include <glib-object.h>}

{ was #define dname def_expr }
function FWUPD_TYPE_REPORT : longint; { return type might be wrong }

{//G_DECLARE_DERIVABLE_TYPE(FwupdReport, fwupd_report, FWUPD, REPORT, GObject) }
{< private > }
type
  PFwupdReportClass = ^TFwupdReportClass;
  TFwupdReportClass = record
      parent_class : TGObjectClass;
      _fwupd_reserved1 : procedure ;cdecl;
      _fwupd_reserved2 : procedure ;cdecl;
      _fwupd_reserved3 : procedure ;cdecl;
      _fwupd_reserved4 : procedure ;cdecl;
      _fwupd_reserved5 : procedure ;cdecl;
      _fwupd_reserved6 : procedure ;cdecl;
      _fwupd_reserved7 : procedure ;cdecl;
    end;

{*
 * FWUPD_REPORT_FLAG_NONE:
 *
 * No report flags are set.
 *
 * Since: 1.9.1
  }

const
  FWUPD_REPORT_FLAG_NONE = 0;  
{*
 * FWUPD_REPORT_FLAG_FROM_OEM:
 *
 * The report was generated by the OEM.
 *
 * Since: 1.9.1
  }
  FWUPD_REPORT_FLAG_FROM_OEM = 1 shl 0;  
{*
 * FWUPD_REPORT_FLAG_IS_UPGRADE:
 *
 * The new firmware was newer than the old firmware.
 *
 * Since: 1.9.14
  }
  FWUPD_REPORT_FLAG_IS_UPGRADE = 1 shl 1;  
{*
 * FWUPD_REPORT_FLAG_UNKNOWN:
 *
 * The report flag is unknown.
 *
 * This is usually caused by a mismatched libfwupdplugin and daemon.
 *
 * Since: 1.9.1
  }
  FWUPD_REPORT_FLAG_UNKNOWN = G_MAXUINT64;  
{*
 * FwupdReportFlags:
 *
 * Flags used to represent report attributes
  }
type
  PFwupdReportFlags = ^TFwupdReportFlags;
  TFwupdReportFlags = Tguint64;

function fwupd_report_new:PFwupdReport;cdecl;external;
function fwupd_report_to_string(self:PFwupdReport):Pgchar;cdecl;external;
function fwupd_report_get_created(self:PFwupdReport):Tguint64;cdecl;external;
procedure fwupd_report_set_created(self:PFwupdReport; created:Tguint64);cdecl;external;
(* Const before type ignored *)
function fwupd_report_get_version_old(self:PFwupdReport):Pgchar;cdecl;external;
(* Const before type ignored *)
procedure fwupd_report_set_version_old(self:PFwupdReport; version_old:Pgchar);cdecl;external;
(* Const before type ignored *)
function fwupd_report_get_vendor(self:PFwupdReport):Pgchar;cdecl;external;
(* Const before type ignored *)
procedure fwupd_report_set_vendor(self:PFwupdReport; vendor:Pgchar);cdecl;external;
function fwupd_report_get_vendor_id(self:PFwupdReport):Tguint32;cdecl;external;
procedure fwupd_report_set_vendor_id(self:PFwupdReport; vendor_id:Tguint32);cdecl;external;
(* Const before type ignored *)
function fwupd_report_get_device_name(self:PFwupdReport):Pgchar;cdecl;external;
(* Const before type ignored *)
procedure fwupd_report_set_device_name(self:PFwupdReport; device_name:Pgchar);cdecl;external;
(* Const before type ignored *)
function fwupd_report_get_distro_id(self:PFwupdReport):Pgchar;cdecl;external;
(* Const before type ignored *)
procedure fwupd_report_set_distro_id(self:PFwupdReport; distro_id:Pgchar);cdecl;external;
(* Const before type ignored *)
function fwupd_report_get_distro_version(self:PFwupdReport):Pgchar;cdecl;external;
(* Const before type ignored *)
procedure fwupd_report_set_distro_version(self:PFwupdReport; distro_version:Pgchar);cdecl;external;
(* Const before type ignored *)
function fwupd_report_get_distro_variant(self:PFwupdReport):Pgchar;cdecl;external;
(* Const before type ignored *)
procedure fwupd_report_set_distro_variant(self:PFwupdReport; distro_variant:Pgchar);cdecl;external;
(* Const before type ignored *)
function fwupd_report_get_remote_id(self:PFwupdReport):Pgchar;cdecl;external;
(* Const before type ignored *)
procedure fwupd_report_set_remote_id(self:PFwupdReport; remote_id:Pgchar);cdecl;external;
function fwupd_report_get_metadata(self:PFwupdReport):PGHashTable;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure fwupd_report_add_metadata_item(self:PFwupdReport; key:Pgchar; value:Pgchar);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function fwupd_report_get_metadata_item(self:PFwupdReport; key:Pgchar):Pgchar;cdecl;external;
function fwupd_report_from_variant(value:PGVariant):PFwupdReport;cdecl;external;
function fwupd_report_to_variant(self:PFwupdReport):PGVariant;cdecl;external;
function fwupd_report_get_flags(self:PFwupdReport):Tguint64;cdecl;external;
procedure fwupd_report_set_flags(self:PFwupdReport; flags:Tguint64);cdecl;external;
procedure fwupd_report_add_flag(self:PFwupdReport; flag:TFwupdReportFlags);cdecl;external;
procedure fwupd_report_remove_flag(self:PFwupdReport; flag:TFwupdReportFlags);cdecl;external;
function fwupd_report_has_flag(self:PFwupdReport; flag:TFwupdReportFlags):Tgboolean;cdecl;external;
(* Const before type ignored *)
function fwupd_report_flag_to_string(report_flag:TFwupdReportFlags):Pgchar;cdecl;external;
(* Const before type ignored *)
function fwupd_report_flag_from_string(report_flag:Pgchar):TFwupdReportFlags;cdecl;external;

implementation

{ was #define dname def_expr }
function FWUPD_TYPE_REPORT : longint; { return type might be wrong }
  begin
    FWUPD_TYPE_REPORT:=fwupd_report_get_type;
  end;


end.
